--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BasqueTech</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
         <h1>BasqueTech</h1>
     </header>
     <main>
-        <a href="pages/main.html">Inicio</a>
+        <a href="Inicio/inicio.html">Inicio</a>
     </main>
 </body>
 </html>
