--- a/Productos/productos.html
+++ b/Productos/productos.html
@@ -17,18 +17,18 @@
             <ul>
                 <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Cuenta</a></li>
+                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+                <li><a href="../Contacto/contacto.html">Contacto</a></li>
+                <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
             </ul>
         </div>
         <div class="default-navbar">
             <ul>
                 <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Cuenta</a></li>
+                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+                <li><a href="../Contacto/contacto.html">Contacto</a></li>
+                <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
@@ -46,7 +46,9 @@
                         <p>Ofrece un rendimiento extremo con tecnología NVIDIA
                             Ada Lovelace, ideal para gaming en 4K y cargas de
                             trabajo intensivas. Compatible con trazado de
-                            rayos avanzado y DLSS 3.</p>
+                            rayos avanzado y DLSS 3.
+                        </p>
+                        <a href="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -66,7 +68,9 @@
                         <p>Diseñada para ofrecer un alto rendimiento en gaming.
                             Equipada con arquitectura NVIDIA Ada Lovelace y 12GB 
                             de memoria GDDR6X,  
-                            permite disfrutar de gráficos detallados</p>
+                            permite disfrutar de gráficos detallados
+                        </p>
+                        <a href="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -85,7 +89,9 @@
                     <div class="card-back">
                         <p>Redefine la productividad y creatividad móvil gracias a  
                             su potente chip M3, que ofrece un rendimiento y
-                            eficiencia inigualables. </p>
+                            eficiencia inigualables.
+                        </p>
+                        <a href="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -97,19 +103,22 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <img src="../img/productos/Producto5.png" alt="Ordenador Work Intel Core i5-12400 / 32GB / 1TB" width="190px">
-                        <p>Ordenador Work Intel Core i5-12400 / 32GB / 1TB</p>
+                        <img src="../img/productos/Producto3.png" alt="Apple iPhone 16 128GB" width="200px">
+                        <p>Apple iPhone 16 128GB</p>
                         <button class="click-area">Click</button>
                     </div>
                     <div class="card-back">
-                        <p>Ideal para tareas profesionales y multitarea
-                            avanzada, gracias a sus 6 núcleos que ofrecen
-                            un rendimiento fluido y eficiente.</p>
+                        <p>Combina un diseño elegante con un rendimiento potente
+                            gracias a su chip de última generación, que optimiza
+                            la velocidad y eficiencia. Su pantalla OLED ofrece
+                            una calidad visual excepcional.
+                        </p>
+                        <a href="">Más información...</a>
                     </div>
                 </div>
                 <span>
                     <a href="">Comprar</a>
-                    <span>499&euro;</span>
+                    <span>946&euro;</span>
                 </span>
             </div>
             <!--Producto 5-->
@@ -123,12 +132,78 @@
                     <div class="card-back">
                         <p>Ordenador compacto y potente, ideal para el trabajo
                             diario y el entretenimiento en el hogar. Equipado con  
-                            un procesador Intel Core i5-12400 y 16GB de RAM</p>
+                            un procesador Intel Core i5-12400 y 16GB de RAM
+                        </p>
+                        <a href="">Más información...</a>
                     </div>
                 </div>
                 <span>
                     <a href="">Comprar</a>
                     <span>399&euro;</span>
+                </span>
+            </div>
+            <!--Producto 6-->
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="../img/productos/Producto5.png" alt="Ordenador Work Intel Core i5-12400 / 32GB / 1TB" width="190px">
+                        <p>Ordenador Work Intel Core i5-12400 / 32GB / 1TB</p>
+                        <button class="click-area">Click</button>
+                    </div>
+                    <div class="card-back">
+                        <p>Ideal para tareas profesionales y multitarea
+                            avanzada, gracias a sus 6 núcleos que ofrecen
+                            un rendimiento fluido y eficiente.
+                        </p>
+                        <a href="">Más información...</a>
+                    </div>
+                </div>
+                <span>
+                    <a href="">Comprar</a>
+                    <span>499&euro;</span>
+                </span>
+            </div>
+            <!--Producto 7-->
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="../img/productos/producto7.png" alt="Portátil Acer Aspire 3 15 A315-44P AMD" width="200px">
+                        <p>Portátil Acer Aspire 3 15 A315-44P AMD</p>
+                        <button class="click-area">Click</button>
+                    </div>
+                    <div class="card-back">
+                        <p>Combina potencia y velocidad con su Ryzen 7 5700U, 16 GB 
+                            de RAM y 512 GB SSD. Su pantalla de 15.6" y diseño ligero
+                            lo hacen ideal para productividad.
+                        </p>
+                        <a href="">Más información...</a>
+                    </div>
+                </div>
+                <span>
+                    <a href="">Comprar</a>
+                    <span>599&euro;</span>
+                </span>
+            </div>
+            <!--Producto 8-->
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <img src="../img/productos/Producto8.png" alt="Acer Chromebook 315 Intel Celeron N4500/8GB/64GB" width="200px">
+                        <p>Acer Chromebook 315 Intel Celeron N4500/8GB/64GB</p>
+                        <button class="click-area">Click</button>
+                    </div>
+                    <div class="card-back">
+                        <p>Es un portátil ligero y eficiente, ideal para tareas básicas
+                             y navegación. Cuenta con un Intel Celeron N4500, 8 GB de 
+                             RAM y 64 GB de almacenamiento, ofreciendo fluidez en el 
+                             uso diario con ChromeOS.
+                        </p>
+                        <a href="">Más información...</a>
+                    </div>
+                </div>
+                <span>
+                    <a href="">Comprar</a>
+                    <span>599&euro;</span>
                 </span>
             </div>
         </div>
