--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Hardware, Soporte, Software, Instalación equipos informáticos, educación">
     <meta name="author" content="Eneko Yranzo Redondo">
-    <title>BasqueTech - Inicio</title>
-    <link rel="stylesheet" href="inicio.css">
+    <title>BasqueTech - Productos</title>
+    <link rel="stylesheet" href="nosotros.css">
     <link rel="shortcut icon" href="../img/Logo.png" type="image/x-icon">
 </head>
 <body>
@@ -15,39 +15,55 @@
             <input type="checkbox" id="menu">
             <label for="menu"></label>
             <ul>
-                <li><a href="inicio.html">Inicio</a></li>
+                <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="../Productos/productos.html">Productos</a></li>
-                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="../Contacto/contacto.html">Contacto</a></li>
                 <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
             </ul>
         </div>
         <div class="default-navbar">
             <ul>
-                <li><a href="inicio.html">Inicio</a></li>
+                <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="../Productos/productos.html">Productos</a></li>
-                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="../Contacto/contacto.html">Contacto</a></li>
                 <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
-    <header>
-        <h1>BasqueTech</h1>
-    </header>
     <main>
-        <span class="descEmpre">
-            Somos una empresa informática que ofrecemos soluciones en hardware y software, incluyendo venta de equipos de última
-            generación, soporte técnico personalizado y desarrollo de software a medida. También nos enfocamos en preparar herramientas
-            para el ámbito educativo, facilitando el aprendizaje eficaz. 
-        </span>
-        <ul class="listaServicios">
-            <li>Venta de hardware</li>
-            <li>Soporte</li>
-            <li>Programación de software</li>
-            <li>Instalación de equipos</li>
-            <li>Equipos para educación</li>
-        </ul>
+        <div class="conocenos">
+            <h2>Conocenos</h2>
+            <span id="textoImagen">
+                <p>BasqueTech somos una empresa informática innovadora dedicada a ofrecer
+                    soluciones integrales en hardware y software. Nos especializamos en la
+                    venta de equipos tecnológicos de última generación, así como brindar
+                    soporte técnico personalizado.<br><br>
+                
+                    Además, desarrollamos software a mediday preparamos equipos para
+                    el ámbito educativo, garantizando que estudiantes y docentes cuenten
+                    con las herramientas necesarias para un aprendizaje eficaz. En BasqueTech
+                    transformamos la tecnología en una aliada para el crecimiento. 
+                </p>
+                <img src="../img/conocenos.png" alt="Imagen conocenos" width="200px">
+            </span>
+        </div>
+        <div class="nuestraMision">
+            <h2>Nuestra Mision</h2>
+            <span id="textoImagen">
+                <img src="../img/Mision.png" alt="Imagen Mision">
+                <p>Nuestra misión es potenciar el aprendizaje y la
+                    innovación en el ámbito educativo mediante soluciones
+                    informáticas de alta calidad. Creemos que la tecnología
+                    es una herramienta clave para abrir nuevas oportunidades
+                    de conocimiento y desarrollo, y trabajamos con compromiso
+                    para ofrecer un servicio cercano, eficiente y personalizado
+                    que impulse el éxito académico y prepare a las nuevas
+                    generaciones para el futuro digital.
+                </p>
+            </span>
+        </div>
     </main>
     <div class="separador">
         <hr>
