--- a/Productos/productos.html
+++ b/Productos/productos.html
@@ -48,7 +48,7 @@
                             trabajo intensivas. Compatible con trazado de
                             rayos avanzado y DLSS 3.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de ASUS TUF Gaming GeForce RTX 4090 OG OC Edition.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -70,7 +70,7 @@
                             de memoria GDDR6X,  
                             permite disfrutar de gráficos detallados
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de MSI GeForce RTX 4070 VENTUS 2X 12G OC.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -91,7 +91,7 @@
                             su potente chip M3, que ofrece un rendimiento y
                             eficiencia inigualables.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de Apple iPad Pro 2024 13_ Wi-Fi 512GB.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -113,7 +113,7 @@
                             la velocidad y eficiencia. Su pantalla OLED ofrece
                             una calidad visual excepcional.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de Apple iPhone 16 128GB.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Documentos/Ficha Tecnica de HP Slim Intel Core i5-12400.pdf" download="">Comprar</a>
                     <span>399&euro;</span>
                 </span>
             </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Documentos/Ficha Tecnica de Sobremesa PcCom Work Intel Core i5-12400 _ 32GB _ 1TB SSD.pdf" download="">Comprar</a>
                     <span>499&euro;</span>
                 </span>
             </div>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Documentos/Ficha Tecnica de Portátil Acer Aspire 3 15 A315-44P.pdf" download="">Comprar</a>
                     <span>599&euro;</span>
                 </span>
             </div>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Documentos/Ficha Tecnica de Chromebook 315.pdf" download="">Comprar</a>
                     <span>599&euro;</span>
                 </span>
             </div>
