--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -47,18 +47,32 @@
                 <td>Calle Ferdinand Zeppelin, Parque Tecnológico de Álava </td>
             </tr>
         </table>
-        <div class="contenedor">
-            <iframe loading="lazy" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.662113904953003%2C42.91359384166167%2C-2.658573389053345%2C42.91534409713476&amp;layer=mapnik&amp;marker=42.914468975611875%2C-2.660343647003174"></iframe>
-            <form class="formulario">
-                <label for="nombre">Nombre<span id="red">*</span></label>
-                <input type="text" name="nombre"><br>
-                <label for="telefono">Telefono</label>
-                <input type="tel" name="telefono"><br>
-                <label for="email">Email<span id="red">*</span></label>
-                <input type="email" name="email"><br>
-                <textarea name="" id="" cols="50" rows="7"></textarea>
-            </form>
-        </div>
+        <iframe loading="lazy" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.662113904953003%2C42.91359384166167%2C-2.658573389053345%2C42.91534409713476&amp;layer=mapnik&amp;marker=42.914468975611875%2C-2.660343647003174"></iframe>
+        <p>
+            Si deseas contactar con nosotros rellena el siguiente formulario <br> 
+            y nos pondremos en contacto con usted. 
+            <br><i><sub>Los campos marcadas con <span id="red">*</span> son obligatorios.</sub></i>
+        </p>
+        <form class="formulario">
+            <div class="item">
+                <input type="text" id="nombre" required placeholder="">
+                <label for="nombre">Nombre <span id="red">*</span></label>
+            </div>
+            <div class="item">
+                <input type="tel" id="telefono" placeholder="">
+                <label for="telefono">Teléfono</label>
+            </div>
+            <div class="item">
+                <input type="email" id="email" required placeholder="">
+                <label for="email">Email <span id="red">*</span></label>
+            </div>
+            <div class="item">
+                <textarea id="mensaje" rows="4" placeholder=""></textarea>
+                <label for="mensaje">Mensaje</label>
+            </div>
+            <input type="submit" value="Enviar Comentario">
+            <input type="reset" value="Borrar">
+        </form>
     </main>
     <div class="separador">
         <hr>
