Cuenta v1 + Pequeños cambios

--- a/Cuenta/cuenta.html
+++ b/Cuenta/cuenta.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Hardware, Soporte, Software, Instalación equipos informáticos, educación">
     <meta name="author" content="Eneko Yranzo Redondo">
-    <title>BasqueTech - Nosotros</title>
-    <link rel="stylesheet" href="nosotros.css">
+    <title>BasqueTech - Cuenta</title>
+    <link rel="stylesheet" href="cuenta.css">
     <link rel="shortcut icon" href="../img/Logo.png" type="image/x-icon">
 </head>
 <body>
@@ -17,80 +17,69 @@
             <ul>
                 <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="../Productos/productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
                 <li><a href="../Contacto/contacto.html">Contacto</a></li>
-                <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
+                <li><a href="cuenta.html">Cuenta</a></li>
             </ul>
         </div>
         <div class="default-navbar">
             <ul>
                 <li><a href="../Inicio/inicio.html">Inicio</a></li>
                 <li><a href="../Productos/productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
                 <li><a href="../Contacto/contacto.html">Contacto</a></li>
-                <li><a href="../Cuenta/cuenta.html">Cuenta</a></li>
+                <li><a href="cuenta.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
     <main>
-        <div class="conocenos">
-            <h2>Conocenos</h2>
-            <span id="textoImagen">
-                <p>BasqueTech somos una empresa informática innovadora dedicada a ofrecer
-                    soluciones integrales en hardware y software. Nos especializamos en la
-                    venta de equipos tecnológicos de última generación, así como brindar
-                    soporte técnico personalizado.<br><br>
-                
-                    Además, desarrollamos software a mediday preparamos equipos para
-                    el ámbito educativo, garantizando que estudiantes y docentes cuenten
-                    con las herramientas necesarias para un aprendizaje eficaz. En BasqueTech
-                    transformamos la tecnología en una aliada para el crecimiento. 
-                </p>
-                <img src="../img/conocenos.png" alt="Imagen conocenos" width="200px">
-            </span>
+        <div class="contenedor-botones">
+            <a href="#popup-login" class="boton">Iniciar Sesión</a>
+            <a href="#popup-registro" class="boton">Crear Cuenta</a>
         </div>
-        <div class="nuestraMision">
-            <h2>Nuestra Mision</h2>
-            <span id="textoImagen">
-                <img src="../img/Mision.png" alt="Imagen Mision" id="img-No">
-                <p>Nuestra misión es potenciar el aprendizaje y la
-                    innovación en el ámbito educativo mediante soluciones
-                    informáticas de alta calidad. Creemos que la tecnología
-                    es una herramienta clave para abrir nuevas oportunidades
-                    de conocimiento y desarrollo, y trabajamos con compromiso
-                    para ofrecer un servicio cercano, eficiente y personalizado
-                    que impulse el éxito académico y prepare a las nuevas
-                    generaciones para el futuro digital.
-                </p>
-            </span>
+
+        <!-- POP-UP LOGIN -->
+        <div id="popup-login" class="overlay">
+            <div class="popup">
+                <a href="#" class="cerrar">&times;</a>
+                <h3>Iniciar Sesión</h3>
+                <form class="formulario">
+                    <div class="item">
+                        <input type="email" id="login-email" required>
+                        <label for="login-email">Email <span class="red">*</span></label>
+                    </div>
+                    <div class="item">
+                        <input type="password" id="login-password" required>
+                        <label for="login-password">Contraseña <span class="red">*</span></label>
+                    </div>
+                    <input type="submit" value="Iniciar Sesión">
+                </form>
+            </div>
         </div>
-        <h2>Nuestro Equipo</h2>
-        <div class="equipo">
-            <span>
-                <img src="../img/Persona1.png" alt="Ane Etxeberria" width="150px" title="Ane Etxeberria">
-                <p>Ane Etxeberria</p>
-            </span>
-            <span>
-                <img src="../img/Persona2.png" alt="Iker Mendizabal" width="140px" title="Iker Mendizabal" style="margin-top: 10px;">
-                <p>Iker Mendizabal</p>
-            </span>
-            <span>
-                <img src="../img/Persona3.png" alt="Javier Ramírez" width="150px" title="Javier Ramírez">
-                <p>Javier Ramírez</p>
-            </span>
-            <span>
-                <img src="../img/Persona4.png" alt="Laura Martín" width="150px" title="Laura Martín">
-                <p>Laura Martín</p>
-            </span>
-            <span>
-                <img src="../img/Persona5.png" alt="Mikel Orozko" width="150px" title="Mikel Orozko">
-                <p>Mikel Orozko</p>
-            </span>
-            <span>
-                <img src="../img/Persona6.png" alt="Sofía Pérez" width="150px" title="Sofía Pérez">
-                <p>Sofía Pérez</p>
-            </span>
+
+        <!-- POP-UP REGISTRO -->
+        <div id="popup-registro" class="overlay">
+            <div class="popup">
+                <a href="#" class="cerrar">&times;</a>
+                <h3>Crear Cuenta</h3>
+                <form class="formulario">
+                    <div class="item">
+                        <input type="text" id="registro-nombre" required>
+                        <label for="registro-nombre">Nombre <span class="red">*</span></label>
+                    </div>
+                    <div class="item">
+                        <input type="email" id="registro-email" required>
+                        <label for="registro-email">Email <span class="red">*</span></label>
+                    </div>
+                    <div class="item">
+                        <input type="password" id="registro-password" required>
+                        <label for="registro-password">Contraseña <span class="red">*</span></label>
+                    </div>
+                    <input type="submit" value="Crear Cuenta">
+                </form>
+            </div>
         </div>
+
     </main>
     <div class="separador">
         <hr>
