--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BasqueTech</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="../img/Logo.png" type="image/x-icon">
+
 </head>
 <body>
     <header>
