--- a/Cuenta/cuenta.html
+++ b/Cuenta/cuenta.html
@@ -35,33 +35,29 @@
     <main>
         <div class="container">
             <div id="form-container" class="form-wrapper">
-                <form id="login" class="form">
+                <form id="login" class="form" action="../Pago/pago.html" method="">
                     <h2>Iniciar Sesión</h2>
                     <div class="item">
                         <input type="email" id="correo" placeholder="" required>
-                        <label for="correo">Correo</label>
+                        <label for="correo">Correo<span id="red">*</span></label>
                     </div>
                     <div class="item">
                         <input type="password" id="contraseña" placeholder="" required>
-                        <label for="contraseña">Constraseña</label>
-                    </div><br>
+                        <label for="contraseña">Constraseña<span id="red">*</span></label>
+                    </div>
                     <input type="submit" value="Entrar">
                     <a href="#form-container">¿No tienes cuenta? Regístrate</a>
                 </form>
     
-                <form id="signup" class="form">
+                <form id="signup" class="form" action="../Pago/pago.html" method="">
                     <h2>Registrarse</h2>
                     <div class="item">
-                        <input type="text" id="usuario" placeholder="">
-                        <label for="usuario">Usuario</label>
+                        <input type="email" id="correo" placeholder="" required>
+                        <label for="correo">Correo<span id="red">*</span></label>
                     </div>
                     <div class="item">
-                        <input type="email" id="correo" placeholder="">
-                        <label for="correo">Correo</label>
-                    </div>
-                    <div class="item">
-                        <input type="password" id="constraseña" placeholder="">
-                        <label for="contraseña">Constraseña</label>
+                        <input type="password" id="constraseña" placeholder="" required>
+                        <label for="contraseña">Constraseña<span id="red">*</span></label>
                     </div>
                     <input type="submit" value="Crear Cuenta">
                     <a href="#">¿Ya tienes cuenta? Inicia sesión</a>
