Pago + PagoRealizado + cambios extra

--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -70,7 +70,7 @@
                 <textarea id="mensaje" rows="4" placeholder=""></textarea>
                 <label for="mensaje">Mensaje</label>
             </div>
-            <input type="submit" value="Enviar Comentario">
+            <input type="submit" value="Enviar">
             <input type="reset" value="Borrar">
         </form>
     </main>
