--- a/Productos/productos.html
+++ b/Productos/productos.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>1899&euro;</span>
                 </span>
             </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>579€ <del>623&euro;</del></span>
                 </span>
             </div>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>1599&euro;</span>
                 </span>
             </div>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <span>
-                    <a href="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>946&euro;</span>
                 </span>
             </div>
@@ -134,11 +134,11 @@
                             diario y el entretenimiento en el hogar. Equipado con  
                             un procesador Intel Core i5-12400 y 16GB de RAM
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de HP Slim Intel Core i5-12400.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
-                    <a href="../Documentos/Ficha Tecnica de HP Slim Intel Core i5-12400.pdf" download="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>399&euro;</span>
                 </span>
             </div>
@@ -155,11 +155,11 @@
                             avanzada, gracias a sus 6 núcleos que ofrecen
                             un rendimiento fluido y eficiente.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de Sobremesa PcCom Work Intel Core i5-12400 _ 32GB _ 1TB SSD.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
-                    <a href="../Documentos/Ficha Tecnica de Sobremesa PcCom Work Intel Core i5-12400 _ 32GB _ 1TB SSD.pdf" download="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>499&euro;</span>
                 </span>
             </div>
@@ -176,11 +176,11 @@
                             de RAM y 512 GB SSD. Su pantalla de 15.6" y diseño ligero
                             lo hacen ideal para productividad.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de Portátil Acer Aspire 3 15 A315-44P.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
-                    <a href="../Documentos/Ficha Tecnica de Portátil Acer Aspire 3 15 A315-44P.pdf" download="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>599&euro;</span>
                 </span>
             </div>
@@ -198,11 +198,11 @@
                              RAM y 64 GB de almacenamiento, ofreciendo fluidez en el 
                              uso diario con ChromeOS.
                         </p>
-                        <a href="">Más información...</a>
+                        <a href="../Documentos/Ficha Tecnica de Chromebook 315.pdf" download="">Más información...</a>
                     </div>
                 </div>
                 <span>
-                    <a href="../Documentos/Ficha Tecnica de Chromebook 315.pdf" download="">Comprar</a>
+                    <a href="../Cuenta/cuenta.html">Comprar</a>
                     <span>599&euro;</span>
                 </span>
             </div>
