--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -59,16 +59,16 @@
                 <label for="nombre">Nombre <span id="red">*</span></label>
             </div>
             <div class="item">
-                <input type="tel" id="telefono" placeholder="">
-                <label for="telefono">Teléfono</label>
+                <input type="tel" id="telefono" placeholder="" required>
+                <label for="telefono">Teléfono <span id="red">*</span></label>
             </div>
             <div class="item">
                 <input type="email" id="email" required placeholder="">
                 <label for="email">Email <span id="red">*</span></label>
             </div>
             <div class="item">
-                <textarea id="mensaje" rows="4" placeholder=""></textarea>
-                <label for="mensaje">Mensaje</label>
+                <textarea id="mensaje" rows="4" placeholder="" required></textarea>
+                <label for="mensaje">Mensaje <span id="red">*</span></label>
             </div>
             <input type="submit" value="Enviar">
             <input type="reset" value="Borrar">
